--- a/language/languages/en.json
+++ b/language/languages/en.json
@@ -1,5 +1,6 @@
 {
-  "home_message": "Green search | Home page",
-  "about_message": "Green search | Language page",
-  "text": "Green search"
+  "title": "Home",
+  "home_message": "Home",
+  "about_message": "Home",
+  "text": "welcome to my home"
 }  
